@@ -109,6 +109,7 @@
 (require 'sendmail)
 (require 'mail-utils)
 (require 'mel)
+(require 'eword-encode) ; eword-encode-field-body
 (require 'mime-view)
 (require 'signature)
 (require 'alist)
@@ -685,7 +686,10 @@ Tspecials means any character that matches with it in header must be quoted.")
   "MIME version number.")
 
 (defconst mime-edit-mime-version-field-for-message/partial
-  (concat "MIME-Version: 1.0 (split by " mime-edit-version ")\n")
+  (concat "MIME-Version:"
+	  (eword-encode-field-body
+	   (concat " 1.0 (split by " mime-edit-version ")\n")
+	   "MIME-Version:"))
   "MIME version field for message/partial.")
 
 
