@@ -1,3 +1,8 @@
+1999-08-30  MORIOKA Tomohiko  <tomo@m17n.org>
+
+	* mime-edit.el (mime-edit-mime-version-field-for-message/partial):
+	Encode `mime-edit-version'.
+
 1999-08-28  MORIOKA Tomohiko  <tomo@m17n.org>
 
 	* mime-play.el (mime-store-message/partial-piece): Use
